--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(estimate_simulation_accuracy)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(estimate_simulation_accuracy main.cpp CsvData.h)
+add_executable(estimate_simulation_accuracy main.cpp CsvData.h BRDF.h)
