--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,6 @@ project(estimate_simulation_accuracy)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(estimate_simulation_accuracy main.cpp CsvData.h BRDF.h)
+
+find_package(Eigen3 REQUIRED)
+target_link_libraries("${CMAKE_PROJECT_NAME}" Eigen3::Eigen)
